# notamoo

./: README.md  pyproject.toml
notamoo/: .env.example  __main__.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
notamoo/routers/: notes.py
notamoo/tests/: conftest.py  test_notes.py
