[tool.poetry]
name = "notamoo"
version = "0.1.0"
description = "Leave special notes for special people!"
authors = ["Artin Mohammadi <sheikhartin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sheikhartin/notamoo"
keywords = ["noting", "note-taking", "web-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
bcrypt = "^4.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
ipython = "^8.26.0"
pytest = "^8.3.2"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
